--- a/views/route_list.ejs
+++ b/views/route_list.ejs
@@ -7,7 +7,7 @@
         <link rel="icon" href="/image/favicon.ico">
         <link rel="apple-touch-icon" href="/image/apple-touch-icon.png">
         <link rel="stylesheet" type="text/css" href="/css/layout.css">
-        <link rel="stylesheet" type="text/css" href="/css/index.css">
+        <link rel="stylesheet" type="text/css" href="/css/route_list.css">
         <title>가치타자</title>
     </head>
     <body>
