--- a/css/layout.css
+++ b/css/layout.css
@@ -9,7 +9,6 @@
     src: url(/font/NanumBarunGothic.ttf);
 }
 */
-
 body {
     background-color: #EFEFEF;
     /*font-family: NanumBarunGothic;*/
@@ -33,4 +32,29 @@ body {
 }
 
 @media screen and (orientation : portrait) { /*세로모드*/
+}
+
+.menuList {
+    width: 100%;
+
+    list-style: none; /*점 제거*/
+    padding-left: 0px; /*점이 있는 공간 제거*/
+
+    margin: 0px;
+}
+.menuBtn {
+    width: 100%;
+    cursor: pointer;
+    text-align: center;
+    vertical-align: middle;
+    color: white;
+    display: inline-block; /*왼쪽에서 오른쪽으로 쌓이게 하는 것*/
+
+    background-color: #002366;
+    border: 1px solid whitesmoke;
+    border-radius: 1rem;
+}
+
+.menuBtn:hover {
+    text-decoration: underline;
 }
