--- a/css/post_list.css
+++ b/css/post_list.css
@@ -1,29 +1,3 @@
-/*login, user setting button css*/
-.menuList {
-    width: 100%;
-
-    list-style: none; /*점 제거*/
-    padding-left: 0px; /*점이 있는 공간 제거*/
-
-    margin: 0px;
-}
-.menuBtn {
-    width: 100%;
-    cursor: pointer;
-    text-align: center;
-    vertical-align: middle;
-    color: white;
-    display: inline-block; /*왼쪽에서 오른쪽으로 쌓이게 하는 것*/
-
-    background-color: #002366;
-    border: 1px solid whitesmoke;
-    border-radius: 1rem;
-}
-
-.menuBtn:hover {
-    text-decoration: underline;
-}
-
 .postBtn {
     cursor:pointer;
     
@@ -53,6 +27,10 @@
     margin-left: 1rem;
     margin-right: 1rem;
     margin-bottom: 1rem;
+}
+
+.input {
+    float: right;
 }
 
 /* Media Query 를 사용한 휴대폰, 데스크탑 표현 구분 */
