--- a/views/mail/find_password_mail.ejs
+++ b/views/mail/find_password_mail.ejs
@@ -788,7 +788,7 @@
                 align="center">
                 <div class="logo-center" align="center" id="emb-email-header"><img
                     style="display: block;height: auto;width: 100%;border: 0;max-width: 141px;"
-                    src="http://ec2-54-152-236-225.compute-1.amazonaws.com:3000/image/logo.png" alt="" width="141" />
+                    src="http://101.101.210.42:3000/image/logo.png" alt="" width="141" />
                 </div>
               </div>
               <!--[if (mso)|(IE)]></td></tr></table><![endif]-->
@@ -888,7 +888,7 @@
                     <div class="btn btn--flat btn--large" style="Margin-bottom: 20px;text-align: center;">
                       <![if !mso]><a
                         style="border-radius: 4px;display: inline-block;font-size: 14px;font-weight: bold;line-height: 24px;padding: 12px 24px;text-align: center;text-decoration: none !important;transition: opacity 0.1s ease-in;color: #ffffff !important;background-color: #002366;font-family: Avenir, sans-serif;"
-                        href="http://ec2-54-152-236-225.compute-1.amazonaws.com:3000/auth/find/password/<%=verifyStr%>">비밀번호 변경하기</a>
+                        href="http://101.101.210.42:3000/auth/find/password/<%=verifyStr%>">비밀번호 변경하기</a>
                       <![endif]>
                       <!--[if mso]><p style="line-height:0;margin:0;">&nbsp;</p><v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" href="http://test.com" style="width:104px" arcsize="9%" fillcolor="#002366" stroke="f"><v:textbox style="mso-fit-shape-to-text:t" inset="0px,11px,0px,11px"><center style="font-size:14px;line-height:24px;color:#FFFFFF;font-family:Avenir,sans-serif;font-weight:bold;mso-line-height-rule:exactly;mso-text-raise:4px">&#51064;&#51613;&#54616;&#44592;</center></v:textbox></v:roundrect><![endif]-->
                     </div>
