--- a/views/mail/register_mail.ejs
+++ b/views/mail/register_mail.ejs
@@ -455,7 +455,7 @@ body{background-color:#fff}.logo a:hover,.logo a:focus{color:#859bb1 !important}
       <div class="header" style="Margin: 0 auto;max-width: 600px;min-width: 320px; width: 320px;width: calc(28000% - 167400px);" id="emb-email-header-container">
       <!--[if (mso)|(IE)]><table align="center" class="header" cellpadding="0" cellspacing="0" role="presentation"><tr><td style="width: 600px"><![endif]-->
         <div class="logo emb-logo-margin-box" style="font-size: 26px;line-height: 32px;Margin-top: 6px;Margin-bottom: 20px;color: #c3ced9;font-family: Roboto,Tahoma,sans-serif;Margin-left: 20px;Margin-right: 20px;" align="center">
-          <div class="logo-center" align="center" id="emb-email-header"><img style="display: block;height: auto;width: 100%;border: 0;max-width: 141px;" src="http://ec2-54-152-236-225.compute-1.amazonaws.com:3000/image/logo.png" alt="" width="141" /></div>
+          <div class="logo-center" align="center" id="emb-email-header"><img style="display: block;height: auto;width: 100%;border: 0;max-width: 141px;" src="http://101.101.210.42:3000/image/logo.png" alt="" width="141" /></div>
         </div>
       <!--[if (mso)|(IE)]></td></tr></table><![endif]-->
       </div>
@@ -536,7 +536,7 @@ body{background-color:#fff}.logo a:hover,.logo a:focus{color:#859bb1 !important}
       
           <div style="Margin-left: 20px;Margin-right: 20px;">
     <div class="btn btn--flat btn--large" style="Margin-bottom: 20px;text-align: center;">
-      <![if !mso]><a style="border-radius: 4px;display: inline-block;font-size: 14px;font-weight: bold;line-height: 24px;padding: 12px 24px;text-align: center;text-decoration: none !important;transition: opacity 0.1s ease-in;color: #ffffff !important;background-color: #002366;font-family: Avenir, sans-serif;" href="http://ec2-54-152-236-225.compute-1.amazonaws.com:3000/auth/emailcheck/<%=verifyStr%>">인증하기</a><![endif]>
+      <![if !mso]><a style="border-radius: 4px;display: inline-block;font-size: 14px;font-weight: bold;line-height: 24px;padding: 12px 24px;text-align: center;text-decoration: none !important;transition: opacity 0.1s ease-in;color: #ffffff !important;background-color: #002366;font-family: Avenir, sans-serif;" href="http://101.101.210.42:3000/auth/emailcheck/<%=verifyStr%>">인증하기</a><![endif]>
     <!--[if mso]><p style="line-height:0;margin:0;">&nbsp;</p><v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" href="http://test.com" style="width:104px" arcsize="9%" fillcolor="#002366" stroke="f"><v:textbox style="mso-fit-shape-to-text:t" inset="0px,11px,0px,11px"><center style="font-size:14px;line-height:24px;color:#FFFFFF;font-family:Avenir,sans-serif;font-weight:bold;mso-line-height-rule:exactly;mso-text-raise:4px">&#51064;&#51613;&#54616;&#44592;</center></v:textbox></v:roundrect><![endif]--></div>
   </div>
 
